2009-02-19  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>

	* src/via_driver.c: (VIAScreenInit), (VIAWriteMode):

	Initialize CRTC before a mode switch. Fix bug #260.

2009-01-26  Jon Nettleton <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaInitXAA), (viaExaCheckComposite):

	a couple of small compatibility fixes for XAA and EXA.

2009-01-17  Jon Nettleton  <jon.nettleton@gmail.com>

	* libxvmc/viaLowLevel.c: (viaDMAInitTimeStamp):
	* src/via_accel.c: (viaDisableVQ):
	* src/via_video.c: (viaVideoFillPixmap):

	viaLowLevel.c and via_accel.c are fixes by 
	Bartosz Kosiorek.  The via_video.c is a syntax
	fix by Robert Bridge.  Thanks for the bug fixes.

2009-01-17  Jon Nettleton  <jon.nettleton@gmail.com>

	* configure.ac:
	* src/via_accel.c: (viaInitAccel), (viaExitAccel),
	(viaFinishInitAccel):
	* src/via_driver.c: (VIASetup), (VIASetupDefaultOptions),
	(VIAPreInit), (VIAWriteMode), (VIAInitialize3DEngine):
	* src/via_driver.h:
	* src/via_memory.c: (viaExaFBSave), (VIAFreeLinear),
	(viaOffScreenLinear), (VIAInitLinear):
	* src/via_priv.h:

	Patch submitted by Robert Bridge, originally started by
	Xavier Bachelot, to remove old EXA support.  We are moving
	forward with the driver and are no longer supporting the
	old EXA initializations.	

2009-01-14  Jon Nettleton  <jon.nettleton@gmail.com>

	* src/via_accel.c: (viaDisableVQ), (viaInitialize2DEngine),
	(viaAccelSync):

	According to VIA's code the P4M900 should have the same
	acceleration initialization registers as the K8M890.  This
	patch fixes this and gives about a 10x increase in the 
	video benchmark numbers.

2009-01-14  Jon Nettleton  <jon.nettletno@gmail.com>

	* src/via_accel.c: (viaFlushPCI):

	remove the check for VIA_3D_ENG_BUSY in the idle loop.
	This causes xorg to chew a bit more cpu with XAA enabled,
	and it causes the entire X server to dump if EXA is enabled.
	I should investigate further, but for now I will just remove
	it.

2009-01-14  Jon Nettleton  <jon.nettleton@gmail.com>
